welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:4: error: reassignment to val
    case (i, j, k) if ((i = j) & (j = k)) => return 20
                          ^greenTicket:4: error: reassignment to val
    case (i, j, k) if ((i = j) & (j = k)) => return 20
                                    ^greenTicket:5: error: reassignment to val
    case (i, j, k) if (((i = j) & (j != k)) | ((i = k) & (j != k)) | ((j = k) & i != j)) => return 10
                           ^greenTicket:5: error: reassignment to val
    case (i, j, k) if (((i = j) & (j != k)) | ((i = k) & (j != k)) | ((j = k) & i != j)) => return 10
                                                  ^greenTicket:5: error: reassignment to val
    case (i, j, k) if (((i = j) & (j != k)) | ((i = k) & (j != k)) | ((j = k) & i != j)) => return 10
                                                                         ^